--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
       <a class="navbar-brand" href="/">
-      <img src="/dhoutside.png" style="width:30px;"> <!-- 이미지 경로 -->
-      <b><i>dhoutside.com</i></b>
+      <b>Node Forum</b>
       </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
